site.css
/* ... */
div#titlebar .division {
  display: none;
}

/************************/
/* Site Navigation Menu */ 
/************************/
#contextnav .label, .message-result, #contextnav li a:hover, .emaildetails-self-even {
  background: #dddddd;
}
  
#contextnav {
  border: 1px solid #999999;
  border-radius: 5px;
}

/****************/
/* Context Menu */
/****************/
#toparea, #tabmenu {
  border-bottom-color: #003366;
  background: white;
}
#contextnav .label, .message-result, #contextnav li a:hover, .emaildetails-self-even {
  background: #cccccc;
}

#contextnav li a, #contextnav .label a {text-decoration: none;}

.postList, .emaildetails-odd, .emaildetails-even, .emaildetails-self-even, .emaildetails-self-odd {
  border-bottom: 1px solid #003366;
  border-top: 1px solid #003366;
}
.even {
  background-color: #dddddd;
}
.hentry {
  border-color: #003366;
}
#utilitylinks li, #sitenavigation li {
  border-color: #003366;
}
#sitenavigation a, #utilitylinks a {
  padding: 0.5em 0.692em;
}
#contextnav .label {
  border-top: none;
}

.message-result {
  border-left-color: #003366;
}

/*********/
/* Forms */
/*********/
textarea, input.textType, input.fileType, select { width: 30em; }

label, div.formelementcheck label, div.formelementtext label, div.checkgroup label, div.formelementsinglecheck label, div.formelementtextarea label {
    color: #003366;
}
input, textarea, .email-body, .email-remainder pre,#add-to-topic textarea {
  font-family: Trebuchet,'Trebuchet MS';
  font-size: 100%;
}
.required label:before {
  color: red;
}

input[type='text'], input[type='password'], select {width: 30em;}

#edit-profile #textType {
  width: 25em;
}

/*****************/
/* Related Links */
/*****************/
#relatedLinks {
  float: right;
  padding: 0px 0px 0px 1.385em;
  width: 12.6em;
}
#relatedLinks .label {
  margin: 0px;
  font-weight: bold;
}
#relatedLinks ul {
  margin-bottom: 1.385em;
}
p img {
  padding: 0px 1.385em 1.385em 0px;
  float: left;
}

.navlinks a, .navlinks span, code.url, .alternateATOM, .email, .fileIcon, .share-widgets a, .share-widgets span {
  background-image: url(http://forums.e-democracy.org/++resource++icons-colour.png);
}

/**********/
/* Footer */
/**********/

#footer-links {
  border-top: 5px solid #999999;
}

/*************/
/* Home Page */
/*************/

#greeting, #latestPhotos, #latestTopics,
#divisionHomeContent .introduction, #divisionHomeContent .image {
  border: 1px solid #999999; border-radius: 5px; padding: 1.385em 1.6em;
}

.image .metadata {
  width: 21em;
  right: 1.6em;
}

#task-tabs #latestPhotos, #task-tabs #latestTopics {
  border: none; 
  padding: 0;
  box-shadow: none;
}

/***************/
/* Pop-up Help */
/***************/

.popup-help {
  background: transparent;
}

/****************/
/* Static Pages */
/****************/

#content {
  border: 1px solid #999999;
  border-radius: 5px;
  padding: 1em 3.4em;
  margin-top: 1.385em;
  width: 51.385em;
}

/**************/
/* Group Home */
/**************/

#page-groups #divisionHomeContent {
  background: white;
  border: 1px solid gray;
  border-radius: 8px;
  margin: 10px 0;
  padding: 0 20px;
}

#group-intro {
  margin-top: -1.385em;
}
#group-intro h1 {
  line-height: 1;
  margin-bottom: 0;
}
#group-intro p {
  margin-top: 0;
}

#extended-topic-search #searcharea {
  top: 0;
  float: right;
  position: relative;
}

#extended-topic-search #searcharea #searchTextInput {
  margin: 0;
  width: 100px;
}

#extended-topic-tasks .alternateATOM {
  display: none;
}

#gs-group-messages-topics-loading {
  height: 39.25em; 
}
#gs-group-messages-topics-toolbar .ui-widget-header {
  border: none;
  background: none;
}

#gs-group-messages-topics-search-input {
  width: 28em;
}

/***************/
/* Member Info */
/***************/

#memberdirectory_length select {
  width: 100%;
}

/*********************/
/* Individual Topics */
/*********************/

#divisionHomeContent .hfeed { 
  background: white;
  padding: 15px;
  border: 1px solid #999999;
  border-radius: 5px 5px 5px 5px;
  box-shadow: 3px 3px 9px rgba(136, 136, 136, 0.43);
}

/**********************/
/*  BeNeighbors.org   */
/* Neighborhood forums*/
/**********************/

.forum-directory {
  -moz-box-shadow: 2px 2px 10px #bbb;
  -webkit-box-shadow: 2px 2px 10px #bbb;
  box-shadow: 2px 2px 10px #bbb;
  border: 1px solid grey;
}

.forum-directory thead {
  background: lightBlue;
  font-size: 1.25em;
  border-radius 8px 8px 0 0;
  border: 1px solid grey;
}

.forum-directory th {
  text-align: left;
}

.forum-directory-even {
  background: lightGrey;
}

.forum-directory td {
  padding-bottom: .25em;
}

.forum-directory .forum-directory-neighborhoods {
  color: #666;
  font-style: italic;
  padding: 0 1em 1em 2.75em;
  border-bottom: 1px solid grey;
}

.forum-directory-forum-home {
  font-size: 1.5em;
  padding-top: 5px;
}

.forum-directory-join a{
  background: lightblue;
  padding: 5px 10px;
  border-radius: 8px;
  text-align: center;
  color: darkblue;
  text-decoration: none;
  border: 1px solid grey;
  font-weight: bold;
}

/****************/
/* Search Boxes */
/****************/

.gs-search {
  min-height: 38em;
}
/* ... */

